# hs-xcframework-simple-demo

./: Package.swift
Swift/: MySwiftLib.swift
XCodeHaskell/XCodeHaskell/: ContentView.swift  XCodeHaskellApp.swift
XCodeHaskell/XCodeHaskell.xcodeproj/: project.pbxproj
XCodeHaskell/XCodeHaskell.xcodeproj/project.xcworkspace/xcuserdata/romes.xcuserdatad/: UserInterfaceState.xcuserstate
XCodeHaskell/XCodeHaskell.xcodeproj/xcuserdata/romes.xcuserdatad/xcschemes/: xcschememanagement.plist
haskell/: CHANGELOG.md  SetupHooks.hs  cabal.project  myexample.cabal
haskell/src/: MyLib.hs
